main.css
/*
 * Globals
 */

 html, body {
  overflow-x: hidden;
 }

 body {
  font-family: sans-serif;
  color: #5F259F;
  background-color: #D0DF00;

  background-image: url("./assets/images/alexis-brown-82988-unsplash_bw.jpg");
  background-size: cover;

  background-attachment:fixed;

  background-blend-mode: soft-light;
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
  margin-top: 0;
  font-weight: normal;
  color: #5F259F;
}

a {
  color: #5F259F;
}

/* Hidden class for jQuery stuff */

.hidden {
  display: none;
}

/*
 * Masthead for nav
 */

.site-masthead {
  position: fixed;
  top: -160px;

  transition: top 0.5s ease-in-out;

  width: 100%;
  background-color: #5F259F;
  color: #ffffff;
  z-index: 2000;

  padding: 1.5em 0;
  /* -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
          box-shadow: inset 0 -2px 5px rgba(0,0,0,.1); */
}

.masthead-show {
  top: 0;
  transition: top 0.5s ease-in-out;
}

/* Masthead brand icon */

.navbar-brand {
  margin-right: 0;
}

.navbar-brand-logo {
  height: 2.5em;
}

.navbar-brand-mobile {
  display: none;
}

.navbar-brand-logo-mobile {
  display: none;
  height: 1em;
}

/* Masthead hamburger icon */

.navbar-toggler {
  border: none;
}

.navbar-toggler-hamburger {
  color: #ffffff;

  height: 1.5em;

  /* position: relative;
  padding-left: 1.25em; */
}

/*
 * Site header tags and description in header
 */

.site-header-text {
  padding-top: 3.5em;
  padding-bottom: 7em;
}
.site-header-title {
  margin-bottom: 0;
  font-size: 60px;
  font-weight: 400;
  line-height: 1;
}
.site-description {
  padding-top: 1em;
  font-size: 36px;
}

/* 
 * brand icon svg in header
 */

.header-image {

  display: block;
  margin: 16em auto 10em auto;

  height: 40em;
}


/*
 * Content ul sidebar
 */

.content-ul {

  font-size: 24px;

  font-weight: 300;
}

.content-ul a:hover {
  cursor: pointer;
  color: #ffffff !important;
}

.content-main {
  font-size: 18px;
  line-height: 1.5;
}

.content-main > div:last-child {
  margin-bottom: 6em;
}

.content-main-post {
  font-size: 24px;
  margin-bottom: 3em;
  border-top: 1px solid #ffffff;

  font-weight: 300;
}

.content-main-title {
  margin-top: 0.5em;
  font-size: 36px;
}

.list-unstyled {
  padding-top: 1em;
}

.sidebar-border {
  border-top: 1px solid #ffffff;
}

.content-main-container {
  margin-top: 1em;
}

.ul-secondary li {
  list-style: none;
  padding-left: 1em;
}

/* Pseudo-footer */

.pseudo-footer {
  display: block;

  width: 100%;
  background-color: #D0DF00;

  height: 21em;

  margin-bottom: 1em;
}

.pseudo-footer-row {
  padding-top: 2em;
}

.pseudo-footer-logo-column {
  padding-top: 1em;
}

.bottom-logo {
  height: 11em;

  display: block;

  margin-left: auto;
  margin-right: auto;
}

.pseudo-footer-contact-column {
  color: #5F259F;
  font-size: 20px;
  line-height: 1.2;
}

.pseudo-footer-contact-column-primary {
  padding-left: 0;
}

/*
 * Footer
 */

.footer {

  position: fixed;
  left: 0;
  bottom: 0;

  font-size: 18px;

  width: 100%;

  padding: 0.8em 0;

  color: #5F259F;
  background-color: #D0DF00;

  border-top: 1px solid #ffffff;

}

.footer-row a:hover {
  color: #ffffff;
}

.footer-subscribe-link {
  margin-left: 0.5em;
  padding: 4px;
  border: 1px solid #ffffff;
  border-radius: 12px;
}



/* custom media query styles */

/* max-width media queries */

/* Large devices (desktops, less than 1200px */

@media (min-width: 1200px) {

  .container {
    max-width: 1400px;
  }

  .navbar-toggler {
    display: none;
  }

}

/* For the MailChimp form */

@media (max-width: 1199.98px) {

  /* masthead */

  .site-masthead {
    top: 0;
  }

  .navbar-brand-logo {
    height: 2em;
  }

  .navbar-toggler {
    display: block;
  }


  /* content section sidebar and main content column */

  .content-ul {
    display: none;
  }

  .content-main {
    justify-content: center;
  }

}

 /* Medium devices (tablets, less than 992px) */

@media (max-width: 991.98px) {

  /* container max-width override */

  .container {
    max-width: 992px;
  }

  /* masthead brand logo size decreases */

  .navbar-brand-logo {
    height: 1.5em;
  }

  /* header logo size decreases */

  .header-image {
    height: 30em;
  }

  /* header text bottom padding decreases */

  .site-header-text {
    padding-bottom: 3em;
    line-height: 1.25;
  }

  /* header text h2 font size decreases */

  .site-header-title {
    font-size: 48px;
    line-height: 1.1;
  }

  /* header text paragraph font size decreases */

  .site-description {
    font-size: 24px;
  }

  /* main column text line height decreases */

  .content-main {
    line-height: 1.25;
  }

}

@media (max-width: 821.98px) {

  .footer-opening {
    min-height: 36px;
  }

  /* pseudo-footer bottom margin can go once footer becomes static, size will adjust slightly*/

  .pseudo-footer {
    height: 18em;
    margin-bottom: 0;
  }

  /* footer no longer fixed */

  .footer {
    position: static;
    height: 5em;
  }

  .footer-row {
    flex-direction: column;
  }

}

@media (max-width: 767.98px) {

  .container {
    max-width: 768px;
  }

  /* masthead scaling down */

  .site-masthead {
    padding: 1em 0;
  }

  .navbar-brand-logo {
    height: 1.2em;
  }
  
  .navbar-toggler {
    font-size: 1rem;
  }

  .header-image {
    height: 22em;
  }

  /* font sizes scaling in main content column */

  .site-header-title {
    font-size: 36px;
  }

  .site-description {
    font-size: 20px;
  }

  .content-main-title {
    font-size: 24px;
  }

  .content-main-post {
    font-size: 18px;
  }

  .ul-secondary li {
    line-height: 1.25;
  }

  /* pseudo footer content needs to scale down at this breakpoint */

  .pseudo-footer {
    height: 16em;
  }

  .bottom-logo {
    height: 8em;
  }

  .pseudo-footer-contact-column {
    font-size: 14px;
  }

  /* footer content *needs* to scale down at this breakpoint */

  .footer {
    font-size: 14px;
  }

  .footer-opening {
    min-height: 24px;
  }

}

@media (max-width: 575.98px) {

  .container {
    max-width: 576px;
  }

  /* switching out larger masthead brand logo for smaller version */

  .navbar-brand-large {
    display: none;
  }

  .navbar-brand-logo {
    display: none;
  }

  .navbar-brand-mobile {
    display: block;
  }

  .navbar-brand-logo-mobile {
    display: block;
  }

  /* hamburger icon scaling down */

  .navbar-toggler-hamburger {
    height: 1.25em;
  }

}

/* custom breakpoints for mobile, specifically content in footers */

@media (max-width: 489.98px) {

  /* pseudo-footer size must increase to accomodate new vertical layout for contact info content */

  .pseudo-footer {
    height: 18em;
  }

  /* pseudo-footer content columns can now stack vertically */

  .pseudo-footer-flex{
    flex-direction: column;
  }

  /* pseudo-footer content columns can lose the padding on either side and a bottom padding is added for primary column */

  .pseudo-footer-contact-column-primary {
    padding-bottom: 8em;
  }
  
  .pseudo-footer-contact-column-secondary {
    padding-left: 0;
  }

}

@media (max-width: 406.98px) {

  .footer {
    height: 8em;
  }

  .footer-subscribe {
    line-height: 2;
  }

  .footer-subscribe-link {
    margin-left: 0;
  }

}

